# site-to-rss

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml
prompts/: assistant-prompt-1.txt  system-prompt-1.txt  user-prompt-1.txt
public/: index.html  style.css
src/: data.rs  error.rs  main.rs  openai.rs  utils.rs
static/: form-wiz-1.js  index.html  style.css
templates/: form-wiz-1.html.hbs  form-wiz-2.html.hbs  form-wiz-3.html.hbs  generate.html.hbs  index.html.hbs
terraform/: main.tf
