[package]
name = "site-to-rss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version= "1.1.2", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.12.0"
once_cell = "1.19.0"
regex = "1.10.2"
reqwest = "0.11.23"
rocket = { version = "0.5.0", features = ["uuid"] }
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
rss = "2.0.7"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_regex = "1.1.0"
uuid = { version = "1.6.1", features = ["fast-rng", "v4"] }
